--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">ver00</string>
     <string name="textV">方向</string>
+    <string name="down">down</string>
+    <string name="up">up</string>
+    <string name="left">left</string>
+    <string name="right">right</string>
 </resources>
